--- a/public/stylesheets/mine.styl
+++ b/public/stylesheets/mine.styl
@@ -13,9 +13,12 @@ body,html
     border: 1px solid #e1e1e8
     border-radius: 4px
     width: 400px
-    height: 280px
     position: absolute
     top: 50%
     left: 50%
-    margin-top: -140px
+    margin-top: -200px
     margin-left: -200px
+
+.login-alert
+	padding-top: 10px
+	padding-bottom: 10px
