--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,13 +2,13 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='/stylesheets/bootstrap.css')
-    link(rel='stylesheet', href='/stylesheets/bootstrap-theme.css')
+    link(rel='stylesheet', href='/stylesheets/lib/bootstrap.css')
+    link(rel='stylesheet', href='/stylesheets/lib/bootstrap-theme.css')
     link(rel='stylesheet', href='/stylesheets/mine.css')
-    script(src='/javascripts/angular.js')
-  body(ng-app)
+    script(src='/javascripts/lib/angular.js')
+  body
     block content
-  script(src='/javascripts/jquery.js')
-  script(src='/javascripts/bootstrap.js')
+  script(src='/javascripts/lib/jquery.js')
+  script(src='/javascripts/lib/bootstrap.js')
+  block js
 
