--- a/public/stylesheets/mine.css
+++ b/public/stylesheets/mine.css
@@ -24,3 +24,8 @@ html {
   padding-top: 10px;
   padding-bottom: 10px;
 }
+#postInput {
+  -webkit-user-modify: read-write-plaintext-only;
+  -moz-user-modify: read-write-plaintext-only;
+  user-modify: read-write-plaintext-only;
+}
