--- a/public/stylesheets/mine.styl
+++ b/public/stylesheets/mine.styl
@@ -22,3 +22,8 @@ body,html
 .login-alert
 	padding-top: 10px
 	padding-bottom: 10px
+
+#postInput
+    -webkit-user-modify: read-write-plaintext-only
+    -moz-user-modify: read-write-plaintext-only
+    user-modify: read-write-plaintext-only
