add a part of download function back

--- a/views/admin/editor.html
+++ b/views/admin/editor.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html<%- cache ? ' manifest="cache.manifest"' : '' %>>
+<html>
 
     <head>
         <title>StackEdit – Editor</title>
-        <link rel="canonical" href="https://stackedit.io/editor">
         <link rel="icon" href="/res/img/stackedit-32.ico" type="image/x-icon">
         <link rel="icon" sizes="192x192" href="/res/img/logo-highres.png">
         <link rel="shortcut icon" href="/res/img/stackedit-32.ico" type="image/x-icon">
